# ImageDemosaicing

./: .gitignore  CMakeLists.txt  README.md  algo-notes.md
include/: SYCLKernels1.hpp  SYCLKernels2.hpp  SYCLKernels3.hpp  SYCLKernels3_1.hpp  SYCLKernels3_2.hpp  SYCLKernels4.hpp  SerialKernels.hpp  image.hpp
python/: testimages.ipynb
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: SYCLmain.cpp  SerialKernels.hpp  Serialmain.cpp  image.hpp  main.cpp  sycl
